@@ -135,7 +135,7 @@ my $builder = $class->new(
     dist_name         => 'Publican',
     license           => 'perl',
     dist_author       => 'Jeff Fearn <jfearn@redhat.com>',
-    dist_version_from => 'bin/publican',
+    dist_version_from => 'lib/Publican.pm',
     build_requires    => {
         'Devel::Cover'                    => 0,
         'Module::Build'                   => 0,
@@ -159,6 +159,7 @@ my $builder = $class->new(
         'File::Copy::Recursive'           => 0.38,
         'File::Find'                      => 0,
         'File::Find::Rule'                => 0,
+        'File::HomeDir'                   => 0,
         'File::Inplace'                   => 0,
         'File::Path'                      => 0,
         'File::pushd'                     => 0,
@@ -181,8 +182,7 @@ my $builder = $class->new(
         'XML::LibXML'                     => 1.67,
         'XML::LibXSLT'                    => 1.67,
         'XML::Simple'                     => 0,
-        'XML::TreeBuilder'                => 3.09,
-#        'XML::TreeBuilder'                => 4.0,
+        'XML::TreeBuilder'                => 4.0,
         'Locale::Maketext::Gettext'       => 0,
     },
     requires => {
@@ -200,6 +200,7 @@ my $builder = $class->new(
         'File::Find'                      => 0,
         'File::Find::Rule'                => 0,
         'File::Inplace'                   => 0,
+        'File::HomeDir'                   => 0,
         'File::Path'                      => 0,
         'File::pushd'                     => 0,
         'File::Spec'                      => 0,
@@ -221,8 +222,7 @@ my $builder = $class->new(
         'XML::LibXML'                     => 1.67,
         'XML::LibXSLT'                    => 1.67,
         'XML::Simple'                     => 0,
-        'XML::TreeBuilder'                => 3.09,
-#        'XML::TreeBuilder'                => 4.0,
+        'XML::TreeBuilder'                => 4.0,
         'Locale::Maketext::Gettext'       => 0,
         'DBI'                             => 0,
         'DBD::SQLite'                     => 0,
@@ -274,6 +274,7 @@ my $builder = $class->new(
         'datadir/xsl/man.xsl'           => 'datadir/xsl/man.xsl',
         'datadir/xsl/abstract.xsl'      => 'datadir/xsl/abstract.xsl',
         'datadir/xsl/subtitle.xsl'      => 'datadir/xsl/subtitle.xsl',
+        'datadir/xsl/merge_revisions.xsl'      => 'datadir/xsl/merge_revisions.xsl',
     },
     web_files => {
         'web/index.html'        => 'web/index.html',
