@@ -232,6 +232,7 @@ datadir/xsl/epub.xsl
 datadir/xsl/html-single.xsl
 datadir/xsl/html.xsl
 datadir/xsl/man.xsl
+datadir/xsl/merge_revisions.xsl
 datadir/xsl/pdf.xsl
 datadir/xsl/subtitle.xsl
 datadir/xsl/txt.xsl
