@@ -5,4 +5,4 @@ debug: 1
 xml_lang: en-US
 chunk_section_depth: 0
 type: Article
-web_home: 1
+web_type: home
