@@ -8,7 +8,7 @@ _publican()
 	cur=`_get_cword`
         brands=`ls /usr/share/publican/Common_Content`
 
-	commands='build bump clean clean_ids clean_set create create_brand create_site help_config install_book install_brand lang_stats old2new package print_banned print_known print_tree print_unused remove_book site_stats update_db update_po update_pot update_site'
+	commands='add_revision build clean clean_ids clean_set create create_brand create_site help_config install_book install_brand lang_stats old2new package print_banned print_known print_tree print_unused remove_book site_stats update_db update_po update_pot update_site'
 
 	if [[ $COMP_CWORD -eq 1 ]] ; then
 		if [[ "$cur" == -* ]]; then
@@ -46,11 +46,11 @@ _publican()
 		if [[ "$cur" == -* ]]; then
 			# possible options for the command
 			case $command in
+				add_revision)
+					options='--date --email --firstname --lang --member --revnumber --surname '
+					;;
 				build)
 					options='--distributed_set --embedtoc --formats --langs --novalid --publish '
-					;;
-				bump)
-					options='--lang '
 					;;
 				clean)
 					options=''
