@@ -21,7 +21,7 @@
 
 Name:           publican
 Version:        2.5
-Release:        1%{?dist}.t40
+Release:        1%{?dist}.t50
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
@@ -64,6 +64,7 @@ BuildRequires:  perl(Encode)
 BuildRequires:  perl(File::Copy::Recursive)
 BuildRequires:  perl(File::Find)
 BuildRequires:  perl(File::Find::Rule)
+BuildRequires:  perl(File::HomeDir)
 BuildRequires:  perl(File::Inplace)
 BuildRequires:  perl(File::Path)
 BuildRequires:  perl(File::pushd)
@@ -84,8 +85,7 @@ BuildRequires:  perl(version)
 BuildRequires:  perl(XML::LibXML)  >=  1.67
 BuildRequires:  perl(XML::LibXSLT) >=  1.67
 BuildRequires:  perl(XML::Simple)
-BuildRequires:  perl(XML::TreeBuilder) >= 3.09-15
-#BuildRequires:  perl(XML::TreeBuilder) >= 4.0
+BuildRequires:  perl(XML::TreeBuilder) >= 4.0
 BuildRequires:  fop >= 0.95
 BuildRequires:  batik
 BuildRequires:  docbook-style-xsl >= 1.75.2-5
@@ -102,8 +102,7 @@ Requires:       batik rpm-build
 Requires:       docbook-style-xsl >= 1.75.2-5
 Requires:       perl(XML::LibXML)  >=  1.67
 Requires:       perl(XML::LibXSLT) >=  1.67
-Requires:  perl(XML::TreeBuilder) >= 3.09-15
-#Requires:       perl(XML::TreeBuilder) >= 4.0
+Requires:       perl(XML::TreeBuilder) >= 4.0
 Requires:       gettext cvs
 Requires:       perl-Template-Toolkit
 Requires:       perl(DBD::SQLite)
