@@ -14,6 +14,7 @@
   - Fix web menu localisation being lost on rebuild from package. BZ #662897
   - Use revision history for edition and release. BZ #642127
   - Deleted edition and release config parameters. BZ #642127
+  - Add add_revision action and associated options. BZ #642127
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
